[gd_scene load_steps=3 format=3 uid="uid://c6efwceppjp36"]

[ext_resource type="Script" path="res://scripts/UI/MainMenu.gd" id="1_l6wv8"]
[ext_resource type="Script" path="res://scripts/game/new_game.gd" id="2_0rf50"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6wv8")

[node name="Main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "GameJam CYTech"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="New" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Nouvelle partie"
script = ExtResource("2_0rf50")

[node name="Continue" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continuer la partie"

[node name="Multiplayer" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multijoueur"

[node name="Options" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../New")
text = "Quitter"

[node name="NewGame" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Multiplayer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Multiplayer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Multijoueur"
horizontal_alignment = 1

[node name="MarginContainer" type="HBoxContainer" parent="Multiplayer"]
layout_mode = 2

[node name="Main" type="MarginContainer" parent="Multiplayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer/MarginContainer/Main"]
layout_mode = 2

[node name="Join" type="Button" parent="Multiplayer/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
text = "Rejoindre"

[node name="Host" type="Button" parent="Multiplayer/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Héberger"

[node name="Back" type="Button" parent="Multiplayer/MarginContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Join")
text = "Retour"

[node name="Sub" type="MarginContainer" parent="Multiplayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 150

[node name="Host" type="VBoxContainer" parent="Multiplayer/MarginContainer/Sub"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2
size_flags_vertical = 4

[node name="LabelIP" type="Label" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "IP du serveur :"

[node name="IP" type="TextEdit" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelPort" type="Label" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Port du serveur :"

[node name="Port" type="TextEdit" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "8000"
placeholder_text = "8000"
scroll_fit_content_height = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelMaxPlayer" type="Label" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Nombre de joueur max :"

[node name="MaxPlayer" type="TextEdit" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "5"
placeholder_text = "5"
scroll_fit_content_height = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveSelector" type="MenuButton" parent="Multiplayer/MarginContainer/Sub/Host/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Choisissez une sauvegarde"
flat = false

[node name="Button" type="Button" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2
disabled = true
text = "Héberger"

[node name="HostError" type="Label" parent="Multiplayer/MarginContainer/Sub/Host"]
layout_mode = 2

[node name="Join" type="VBoxContainer" parent="Multiplayer/MarginContainer/Sub"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Multiplayer/MarginContainer/Sub/Join"]
layout_mode = 2
size_flags_vertical = 4

[node name="LabelIP" type="Label" parent="Multiplayer/MarginContainer/Sub/Join/HBoxContainer"]
layout_mode = 2
text = "IP du serveur: "

[node name="IP" type="TextEdit" parent="Multiplayer/MarginContainer/Sub/Join/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "127.0.0.1"
scroll_fit_content_height = true

[node name="LabelPort" type="Label" parent="Multiplayer/MarginContainer/Sub/Join/HBoxContainer"]
layout_mode = 2
text = "Port du serveur: "

[node name="Port" type="TextEdit" parent="Multiplayer/MarginContainer/Sub/Join/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "8000"
placeholder_text = "8000"

[node name="Button" type="Button" parent="Multiplayer/MarginContainer/Sub/Join"]
layout_mode = 2
text = "Rejoindre"

[node name="JoinError" type="Label" parent="Multiplayer/MarginContainer/Sub/Join"]
layout_mode = 2

[node name="Options" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="Main" type="MarginContainer" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Options/HBoxContainer/Main"]
layout_mode = 2

[node name="Sound" type="Button" parent="Options/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
text = "Son"

[node name="Control" type="Button" parent="Options/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
text = "Contrôle"

[node name="Back" type="Button" parent="Options/HBoxContainer/Main/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Sound")
text = "Retour"

[node name="Sub" type="MarginContainer" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 150

[node name="Sound" type="VBoxContainer" parent="Options/HBoxContainer/Sub"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Music" type="MarginContainer" parent="Options/HBoxContainer/Sub/Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Options/HBoxContainer/Sub/Sound/Music"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/HBoxContainer/Sub/Sound/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Musique
"

[node name="HSlider" type="HSlider" parent="Options/HBoxContainer/Sub/Sound/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Sfx" type="MarginContainer" parent="Options/HBoxContainer/Sub/Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Options/HBoxContainer/Sub/Sound/Sfx"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/HBoxContainer/Sub/Sound/Sfx/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Effet"

[node name="HSlider" type="HSlider" parent="Options/HBoxContainer/Sub/Sound/Sfx/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Entities" type="MarginContainer" parent="Options/HBoxContainer/Sub/Sound"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Options/HBoxContainer/Sub/Sound/Entities"]
layout_mode = 2
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Options/HBoxContainer/Sub/Sound/Entities/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.2
text = "Entité"

[node name="HSlider" type="HSlider" parent="Options/HBoxContainer/Sub/Sound/Entities/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Controls" type="VBoxContainer" parent="Options/HBoxContainer/Sub"]
visible = false
layout_mode = 2

[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/New" to="Main/MarginContainer/VBoxContainer/New" method="_on_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Multiplayer/MarginContainer/Main/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Main/VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Main/VBoxContainer/Control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/Main/VBoxContainer/Back" to="." method="_on_back_pressed"]
